--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,14 @@ textarea {
 .hide{
   display: none;
 }
-.replace-product{
+[class^=replace-product]{
   background-color: lightgrey;
+  margin-left: 1em;
+  padding: 1em;
+}
+[class^=main-product]{
+  margin-left: 1em;
+  padding: 1em;
 }
 /* ============================================================
   SECTIONS
