--- a/css/main.css
+++ b/css/main.css
@@ -25,12 +25,22 @@ textarea {
 }
 [class^=replace-product]{
   background-color: lightgrey;
-  
   padding: 1em;
 }
+[class^=repeat-product]{
+  /*padding: 2em 0 0 0;*/
+  border: 1px solid #eee
+}
 [class^=main-product]{
-  
   padding: 1em;
+}
+.buttonText{
+	font-family: "Oswald", Helvetica, Arial, sans-serif!important;
+	font-weight: 600;
+}
+.row {
+	margin-left:0px;
+	margin-right:0px;
 }
 /* ============================================================
   SECTIONS
@@ -425,7 +435,10 @@ nav#nav-mobile {
     display: block; }
 }
 /* Utilities ----------------------------*/
-
+.conditions{
+	font-size: 1.2em;
+	margin:5% 0;
+}
 /*a.delete-product {background:url(./img/icon-delete.png) no-repeat top left; display:block; width:22px; height:22px;}*/
 
 
