--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ textarea {
   display: none;
 }
 [class^=replace-product]{
-  background-color: lightgrey;
+  background-color: #b5ddff;
   padding: 1em;
 }
 [class^=repeat-product]{
@@ -38,9 +38,23 @@ textarea {
 	font-family: "Oswald", Helvetica, Arial, sans-serif!important;
 	font-weight: 600;
 }
+
 .row {
 	margin-left:0px;
 	margin-right:0px;
+}
+.btn-lg{
+  margin-top: 1rem;
+}
+.d-flex{
+  margin-bottom: 0;
+}
+.p-2{
+  padding:0!important;
+}
+label{
+  margin-bottom: 0;
+  font-size: 0.92rem;
 }
 /* ============================================================
   SECTIONS
