--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,13 @@ label{
   margin-bottom: 0;
   font-size: 0.92rem;
 }
+div.message.success{
+  background-color:#caf7ce;
+  font-family: "Oswald", Helvetica, Arial, sans-serif!important;
+  font-size:1rem;
+  font-weight: 400;
+  text-align: center;
+}
 /* ============================================================
   SECTIONS
 ============================================================ */
